--- a/public/user/css/_partials/cart.css
+++ b/public/user/css/_partials/cart.css
@@ -69,14 +69,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   gap: 5px;
   margin-right: 40px;
 }
 
 .shopping-cart .content .cart-boxes .cart-box .text .cart-name {
-  max-width: 90px;
-  text-align: center;
   font-size: 12px;
   line-height: 1;
   font-weight: 500;
@@ -90,12 +87,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
   margin: 0 auto;
 }
 
 .shopping-cart .content .cart-boxes .cart-box .row .quantity {
-  width: 37px;
+  width: 20px;
   outline: none;
   border: none;
   text-align: center;
@@ -159,10 +155,59 @@
 
 @media (max-width: 991px) {
   .shopping-cart {
-    width: 100%;
-    right: 0;
+    width: 60%;
+    right: 35px;
     top: 80px;
+  }
+
+  .shopping-cart .content .cart-boxes .cart-box .text {
+    width: 250px;
   }
 }
 
+@media (min-width: 992px) {
+  .shopping-cart .content .cart-boxes .cart-box .text {
+    align-items: center;
+  }
+
+  .shopping-cart .content .cart-boxes .cart-box .text .cart-name {
+    max-width: 90px;
+    text-align: center;
+  }
+}
+
+
+.quantity-btn {
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  cursor: pointer;
+}
+
+.quantity-btn i {
+  display: block;
+  width: 100%;
+}
+
+.plus {
+  border-left: none;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  margin-right: 10px;
+}
+
+.minus {
+  border-right: none;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.quantity {
+  width: 50px;
+  text-align: center;
+  border: none;
+  background-color: #fff;
+  margin: 0 10px;
+}
 /* End Shopping Cart */
