--- a/public/user/css/_partials/cart.css
+++ b/public/user/css/_partials/cart.css
@@ -51,8 +51,8 @@
 .shopping-cart .content .cart-boxes .cart-box {
   display: flex;
   align-items: center;
-  margin: 10px;
-  gap: 10px;
+  /* margin: 10px; */
+  /* gap: 10px; */
   color: black;
   padding: 10px;
   border-radius: 10px;
@@ -92,6 +92,8 @@
 
 .shopping-cart .content .cart-boxes .cart-box .row .quantity {
   width: 20px;
+  margin-right: 0px;
+  margin-left: 0px;
   outline: none;
   border: none;
   text-align: center;
@@ -153,6 +155,7 @@
 }
 
 
+
 @media (max-width: 991px) {
   .shopping-cart {
     width: 60%;
@@ -161,7 +164,7 @@
   }
 
   .shopping-cart .content .cart-boxes .cart-box .text {
-    width: 250px;
+    width: 70px;
   }
 }
 
